--- a/src/components/reply/reply.module.css
+++ b/src/components/reply/reply.module.css
@@ -108,3 +108,9 @@
   color: var(--text);
   text-decoration: none;
 }
+
+.stateLabel {
+  height: 0;
+  display: inline-block;
+  padding: 0 5px;
+}
